# cargo-advent

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release-plz.yml
examples/env/: .env-example
src/: command_line.rs  context.rs  functions.rs  lib.rs  main.rs  test_utils.rs
src/command_line/: cmd_line_model.rs  model.rs
src/functions/: generate_project.rs
