[package]
name = "cargo-advent"
version = "0.1.0"
edition = "2024"
authors = ["codersparks <codersparks@users.noreply.github.com>"]
description = "Yet another cli to help with Advent of Code challenges"
readme = "README.md"
repository = "https://github.com/codersparks-aoc/cargo-advent"
license = "MIT"
keywords = ["advent", "aoc"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[lib]
name = "cargo_advent"
path = "src/lib.rs"

[[bin]]
name = "cargo-advent"
path = "src/main.rs"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
regex = "1.11.2"
lazy_static = "1.5.0"
cargo-generate = "0.23.5"
anyhow = "1.0.100"

[dev-dependencies]
shlex = "1.3.0"
test-log = { version = "0.2.18", default-features = false, features = ["color", "trace"] }
