[package]
name = "cargo-advent"
version = "0.2.0"
edition = "2024"
authors = ["codersparks <codersparks@users.noreply.github.com>"]
description = "Yet another cli to help with Advent of Code challenges"
readme = "README.md"
repository = "https://github.com/codersparks-aoc/cargo-advent"
license = "MIT"
keywords = ["advent", "aoc"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[lib]
name = "cargo_advent"
path = "src/lib.rs"

[[bin]]
name = "cargo-advent"
path = "src/main.rs"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
regex = "1.11.2"
lazy_static = "1.5.0"
cargo-generate = "0.23.5"
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.29.0"
anyhow = "1.0.100"
thiserror = "2.0.16"
chrono = "0.4.42"
tracing-appender = "0.2.3"

